--- a/CSS/index.css
+++ b/CSS/index.css
@@ -239,7 +239,7 @@ body {
      text-align: left;
    }
  }
- @media only screen and (width<=1050px){
+ @media only screen and (max-width: 1050px){
    .grid{
       grid-template-columns: 100%;
    }
